--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Fichier d’environnement local ignoré pour éviter de versionner des secrets ou des clés API
+.env.local
 # Logs
 logs
 *.log
@@ -11,6 +13,13 @@ node_modules
 dist
 dist-ssr
 *.local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.test
 
 # Editor directories and files
 .vscode/*
